--- a/Optic.Business/Optic.Business.csproj
+++ b/Optic.Business/Optic.Business.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CarManager.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="OnFormLoadManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
