--- a/Optic.DataAccess/Optic.DataAccess.csproj
+++ b/Optic.DataAccess/Optic.DataAccess.csproj
@@ -31,6 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -43,10 +50,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CarData\CarDataAccess.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="DTOs\CarDTO.cs" />
     <Compile Include="DTOs\CarTypeDTO.cs" />
     <Compile Include="DTOs\PersonDTO.cs" />
+    <Compile Include="OnFormLoad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
