--- a/Optic.Data/Optic.Data.csproj
+++ b/Optic.Data/Optic.Data.csproj
@@ -67,7 +67,10 @@
     <Compile Include="Context.cs" />
     <Compile Include="Models\Car.cs" />
     <Compile Include="Models\CarType.cs" />
+    <Compile Include="Models\MasterType.cs" />
+    <Compile Include="Models\OpticMaster.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\VendorMaster.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="UnitOfWork.cs" />
