--- a/Optic.Common/Optic.Common.csproj
+++ b/Optic.Common/Optic.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{420D4F88-C498-4EB6-B738-4E2120BBAF77}</ProjectGuid>
+    <ProjectGuid>{EC229285-C640-4CBF-9317-1CB375729AD0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Optic.Business</RootNamespace>
-    <AssemblyName>Optic.Business</AssemblyName>
+    <RootNamespace>Optic.Common</RootNamespace>
+    <AssemblyName>Optic.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -41,21 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CarManager.cs" />
-    <Compile Include="OnFormLoadManager.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Optic.Common\Optic.Common.csproj">
-      <Project>{ec229285-c640-4cbf-9317-1cb375729ad0}</Project>
-      <Name>Optic.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Optic.DataAccess\Optic.DataAccess.csproj">
-      <Project>{b727d4d0-b248-459c-8016-e55aab8a379a}</Project>
-      <Name>Optic.DataAccess</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
