--- a/Optic.Business/Optic.Business.csproj
+++ b/Optic.Business/Optic.Business.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CarManager.cs" />
     <Compile Include="OnFormLoadManager.cs" />
+    <Compile Include="OpticMasterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
