--- a/Optic.DataAccess/Optic.DataAccess.csproj
+++ b/Optic.DataAccess/Optic.DataAccess.csproj
@@ -52,7 +52,9 @@
     <Compile Include="CarData\CarDataAccess.cs" />
     <Compile Include="DTOs\CarDTO.cs" />
     <Compile Include="DTOs\CarTypeDTO.cs" />
+    <Compile Include="DTOs\OpticMasterDTO.cs" />
     <Compile Include="DTOs\PersonDTO.cs" />
+    <Compile Include="Masters\OpticMasterDataAccess.cs" />
     <Compile Include="OnFormLoad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
