Frame Master Add/Update Competed. Removed Unnecessary code.

--- a/Optic.Windows/App.config
+++ b/Optic.Windows/App.config
@@ -7,7 +7,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection"
-         connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Temp\MyDataBase.accdb;"
+         connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=F:\projects\OpticDB\MyDataBase.accdb;"
          providerName="JetEntityFrameworkProvider" />
     <!--<add name="DefaultConnection"
          connectionString="Microsoft.Jet.OLEDB.4.0;Data Source=c:\\Temp\MyDataBase.MDB"
