--- a/Optic.Business/Optic.Business.csproj
+++ b/Optic.Business/Optic.Business.csproj
@@ -44,6 +44,7 @@
     <Compile Include="OnFormLoadManager.cs" />
     <Compile Include="OpticMasterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VendorMasterManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Optic.Common\Optic.Common.csproj">
