--- a/Optic.DataAccess/Optic.DataAccess.csproj
+++ b/Optic.DataAccess/Optic.DataAccess.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\OpticDisplayMasterDTO.cs" />
     <Compile Include="DTOs\OpticMasterDTO.cs" />
     <Compile Include="DTOs\VendorMasterDTO.cs" />
     <Compile Include="Masters\OpticMasterDataAccess.cs" />
